# himeko_hypergraph

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
analysis/tensor_representation/: graph_basics.py  hypergraphs.py  tensors_basic.py  tensors_tiny_hypergraph.py
design/: hypergraphs.drawio
resources/robots/mobile/: cube_robot.urdf  simple_robot.urdf
src/elements/: attribute.py  edge.py  element.py  vertex.py
src/exceptions/: basic_exceptions.py
src/factories/: creation_elements.py
src/himeko/common/: clock.py
src/himeko/transformations/: meta_generators.py
src/mapping/: bijective_mapping.py  surjective_mapping.py
src/parser/robotics/: urdf_parser.py
src/progeny/execution/: execution_graph.py
src/progeny/geometry/: geometry.py
src/progeny/robotics/: elements.py  kinematics.py  metaelements.py
src/special/: aggregate_edges.py
src/transformations/: dictionary_entry_point.py  identity_transformation.py
src/visualization/: network_visualization.py
test/application/geolocation/: test_geo_location.py
test/benchmark/: benchmark_transformation_clique_expansion.py  benchmark_transformation_star_expansion.py  benchmark_visualization_clique_expansion.py  benchmark_visualization_star_expansion.py  table_benchmarks_star_expansion.py
test/common/: test_clock.py
test/elements/: test_edge.py  test_values.py  test_vertex.py
test/elements/analysis/: test_sequence.py
test/elements/base_interfaces/: test_base_interfaces.py
test/elements/operations/: test_associate_edges.py  test_remove_edges.py  test_rename_elements.py  (+2 more)
(+56 files in other folders)
