[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "himeko"
version = "0.0.1"
authors = [
    { name="Csaba Hajdu", email="kyberszittya@protonmail.ch" },
]
description = "Himeko hypergraph core elements with hypergraph model, expansion strategies."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.0.1",
    "jinja2>=3.1.4",
    "lxml>=4.6.3",
]
[tool.setuptools]
packages = ["himeko"]
package-dir = {"" = "src"}
[project.urls]
Homepage = "https://github.com/kyberszittya/himeko_hypergraph"
Issues = "https://github.com/kyberszittya/himeko_hypergraph/issues"
[tool.pytest.ini_options]
testpaths = ["test"]
addopts = ["--verbose"]